# riverside

./: .gitignore
auth/: .env  Cargo.toml
auth/migrations/: 20250814181147_users.sql  20250816064747_meets.sql  20250816064907_participants.sql  20250820192938_recordings.sql  20250821065005_recording_events.sql  20250822195920_combine_video.sql  20250825081922_completed_recordings.sql
auth/src/: main.rs
auth/src/controllers/: mod.rs
auth/src/controllers/generated_video_url/: get_all_generated_recordings.rs  get_final_url.rs  mod.rs
auth/src/controllers/meets/: add_participant.rs  create_meet.rs  get_meet_info.rs  get_meets.rs  is_host.rs  join_recording.rs  leave_recording.rs  mod.rs  remove_participant.rs
auth/src/controllers/time/: get_time.rs
auth/src/controllers/users/: mod.rs  signin.rs  signup.rs  whoami.rs
auth/src/controllers/video/: upload.rs
auth/src/helpers/: cloudinary_final_url.rs  generate_token.rs  mod.rs
auth/src/middlewares/: auth_middleware.rs
auth/src/types/: mod.rs
auth/src/types/main/: mod.rs
auth/src/types/models/: mod.rs
auth/src/types/models/completed_recording/: complete_recording_db.rs  mod.rs
auth/src/types/models/meet/: meet_from_db.rs  (+1 more)
auth/src/types/responses/: general_errors.rs  login_response.rs  mod.rs  validation_errors.rs
auth/src/types/shared_trait/: mod.rs  validate_trait.rs
auth/src/types/validator/: add_participant.rs  add_video_data.rs  generated_video.rs  get_meet_info.rs  is_host.rs  join_meeting.rs  leave_meeting.rs  meet_create.rs  mod.rs  remove_participant.rs  user_signin.rs  user_signup.rs
(+61 files in other folders)
