[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-web = "4.11.0"
bcrypt = "0.17.0"
chrono = "0.4.41"
dotenvy = "0.15.7"
env_logger = "0.11.8"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
log = "0.4.27"
r2d2 = "0.8.10"
redis = { version = "0.32.5", features = ["r2d2"] }
serde = { version = "1.0.219", features = ["derive"] }
sha1 = "0.10.6"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-async-std-native-tls"] }
tokio = { version = "1.47.1", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
